# OpenCLInterpolation

./: CMakeLists.txt  InterpolationOpenCLData.cpp  InterpolationOpenCLData.h  InterpolationProblem.cpp  InterpolationProblem.h  InterpolationUtils.cpp  InterpolationUtils.h  OpenCLSubtask.cpp  OpenCLSubtask.h  TimeUtils.cpp  TimeUtils.h  VectorAdd.cpp  VectorAdd.h  build.sh  build_win.sh  main.cpp  run.sh  run_different_sizes.sh  run_mpi.sh
kernels/: convolution.cl  fpga_build.sh  interpol.cl  interpolDouble.cl  interpolFpga.cl  vecAdd.cl
src/: CL.cpp  CL.h  CLBuffer.cpp  CLBuffer.h  CLCommandQueue.cpp  CLCommandQueue.h  CLContext.cpp  CLContext.h  CLDevice.cpp  CLDevice.h  CLLog.cpp  CLLog.h  CLPlatform.cpp  CLPlatform.h  CLProgram.cpp  CLProgram.h  CLTypes.h  CLUtils.cpp  CLUtils.h  NDimContiniousArray.h  NamedParameter.h
src/problems/: Convolution.cpp  Convolution.h  InterpolationProblem.h  InterpolationUtils.h  OpenCLSubtask.cpp  VectorAdd.cpp  VectorAdd.h
src/utils/: BMPImage.cpp  BMPImage.h  MakeUnique.h  TimeUtils.cpp  TimeUtils.h
